--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 
 
 
-    <title>Trang Chủ</title>
+    <title>GearZone - Chuyên Cung Cấp Các Mặt Hàng Công Nghệ Toàn Cầu</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
   </head>
